Add PyVarObject definition
Just 20 lines code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set (Object_src
 src/Object/_obj_base_.h 
 src/Object/PyObject.h
 src/Object/PyIntObject.h src/Object/PyIntObject.c
-src/Object/_obj_core_.h src/Object/_obj_core_.c)
+src/Object/_obj_core_.h src/Object/_obj_core_.c
+src/Object/PyStringObject.h src/Object/PyStringObject.c)
 
 set (test_src src/test/PyIntObject_test.c)
 
